<resources>
    <string name="app_name">Car Charger DYMS</string>
    <string name="welcomescreen">Welcome!</string>
    <string name="app_description">Pole Mounted Electric Vehicle Charging System.</string>
    <string name="forgotpasswor">Forgot Password?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="SIGCE_logo">SIGCE LOGO</string>
    <string name="fisthomeregisterbutton">Register Now!</string>
    <string name="loginscreenloginbig">Login</string>
    <string name="loginemail">Email Id</string>
    <string name="loginpassword">Password</string>
    <string name="loginbuttonloginscreen">Login</string>
    <string name="notauserregisternow">You are not a member?</string>
    <string name="loginscreenregisternow">Register Now!</string>
    <string name="registerpagecreatenewaccount">Create a new Account</string>
    <string name="registerpagename">Name</string>
    <string name="registerpagephoneno">Mobile Number</string>
    <string name="registerpageupiid">UPI ID</string>
    <string name="startupimage">startupiamges</string>
    <string name="paymentgateway">Payment Gateway</string>
    <string name="loadinupiid">Loading Registered UPI ID.......</string>
    <string name="chargingamountdescription">Cost of charging is ₹10 per unit.\n Prepaid Recharge only! </string>
    <string name="enterupipin">Enter Amount &amp; Pin</string>
    <string name="enterupipindialog">Enter Amount &amp; Pin</string>
    <string name="upipindialog">UPI PIN</string>
    <string name="paynow">Pay Now</string>
    <string name="transactionpage">Once the amount is deducted from the account the car will only charge for the amount paid.</string>
    <string name="carimage">Car Image</string>
    <string name="scannow">Scan Now</string>
    <string name="lampost">Lamp Post</string>
    <string name="instscanqr">Scan QR code present on the charging post to continue.</string>
    <string name="startchargingbutton">Start Charging</string>
    <string name="stopchargingbutton">Stop Charging</string>
    <string name="pluginchargernow">Plug In Your Car</string>
    <string name="chargermatoff">chargermatoff</string>
    <string name="caronstartcharging">car</string>
    <string name="chargeroffwire">chargeroffwire</string>
    <string name="amount">Recharge Amount</string>
    <string name="Ampere">Total Amount</string>
    <string name="chargermaton">chargermaton</string>
    <string name="chargeronimg">chargeronimg</string>
    <string name="chargeroff">chargeroff</string>
    <string name="currentusageamount">Used</string>
    <string name="totalreachrgeamount">Total </string>
    <string name="plainamount">Amount</string>
    <string name="invoice">Invoice</string>
    <string name="invoicepagecarcharging">Car Charging</string>
    <string name="invoicepageservices">Services (Parking)</string>
    <string name="servicesamountinvoicepage">0.00</string>
    <string name="Invoicepageinfo">A Charger of ₹10 per unit is charged.</string>
    <string name="invoicetotal">TOTAL</string>
    <string name="invoicedes">DESCRIPTION</string>
    <string name="invoiceprice">PRICE</string>
    <string name="rechargeagain">Continue Charging</string>
    <string name="exitapp">Exit App</string>
    <string name="channel_name">This is a test</string>
    <string name="channel_description">This is a test description</string>
    <string name="showidepass">showhidepass</string>
    <string name="showpassword">showpassword</string>
    <string name="Chargingdnd">Charging..Do Not Disconnect!</string>
    <string name="refund">A Refund will be initiated in 7 days if charging stopped or incomplete.</string>
    <string name="exit">Press Back Button To Exit.</string>
</resources>