<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="68dp"
        android:layout_height="67dp"
        android:contentDescription="@string/SIGCE_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/invoiceimage"
        android:layout_width="378dp"
        android:layout_height="508dp"
        android:contentDescription="@string/invoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        app:srcCompat="@drawable/bill" />

    <TextView
        android:id="@+id/invoicetotalamount"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:gravity="right"
        android:textColor="#040404"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="@+id/amountservicestextview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/amountservicestextview"
        app:layout_constraintTop_toBottomOf="@+id/amountservicestextview"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/invoicename"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/invoice"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/invoiceimage"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <TextView
        android:id="@+id/carcharginginvoicetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoicepagecarcharging"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="@+id/servicesinvoicetextview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/servicesinvoicetextview"
        app:layout_constraintTop_toTopOf="@+id/invoiceimage"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/servicesinvoicetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invoicepageservices"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/invoiceimage"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="@+id/invoiceimage"
        app:layout_constraintTop_toBottomOf="@+id/carcharginginvoicetextview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/amountservicestextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicesamountinvoicepage"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="@+id/invoiceimage"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/servicesinvoicetextview"
        app:layout_constraintTop_toTopOf="@+id/invoiceimage"
        app:layout_constraintVertical_bias="0.539" />

    <TextView
        android:id="@+id/invoiveamounttextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/amountservicestextview"
        app:layout_constraintEnd_toEndOf="@+id/amountservicestextview"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/amountservicestextview"
        app:layout_constraintTop_toTopOf="@+id/carcharginginvoicetextview"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/invoicecar"
        android:layout_width="270dp"
        android:layout_height="225dp"
        android:contentDescription="@string/carimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/invoiceimage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/invoiceimage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:srcCompat="@drawable/carinvoice" />

    <TextView
        android:id="@+id/invoicepageinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Invoicepageinfo"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="@+id/invoiceimage"
        app:layout_constraintStart_toStartOf="@+id/invoiceimage"
        app:layout_constraintTop_toBottomOf="@+id/invoicename"
        app:layout_constraintVertical_bias="0.659" />

    <TextView
        android:id="@+id/invoiceunitconsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/invoicepageinfo"
        app:layout_constraintEnd_toStartOf="@+id/invoicetotalamount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/servicesinvoicetextview"
        app:layout_constraintTop_toBottomOf="@+id/servicesinvoicetextview"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/totalinvoice"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:gravity="center"
        android:text="@string/invoicetotal"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/invoicetotalamount"
        app:layout_constraintEnd_toStartOf="@+id/invoicetotalamount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/invoiceunitconsumed"
        app:layout_constraintTop_toTopOf="@+id/invoicetotalamount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:text="@string/invoicedes"
        android:textColor="#E91E63"
        app:layout_constraintStart_toStartOf="@+id/carcharginginvoicetextview"
        app:layout_constraintTop_toBottomOf="@+id/invoicename" />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="91dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:text="@string/invoiceprice"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/invoiveamounttextview"
        app:layout_constraintEnd_toEndOf="@+id/amountservicestextview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/desc"
        app:layout_constraintTop_toBottomOf="@+id/invoicename"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/invoicenumber"
        android:layout_width="232dp"
        android:layout_height="19dp"
        android:gravity="center"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="@+id/invoicecar"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoicepageinfo"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/rechargeamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:text="@string/rechargeagain"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoiceimage"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/invoicepagerefund"
        android:layout_width="305dp"
        android:layout_height="36dp"
        android:text="@string/refund"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/invoiceimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invoicepageinfo"
        app:layout_constraintVertical_bias="0.78" />
</androidx.constraintlayout.widget.ConstraintLayout>